--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
-    "restify": "^2.8.2"
+    "restify": "^2.8.2",
+    "async": "^0.9.0"
   }
 }
