--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
+    "aws-sdk": "^2.0.17",
     "restify": "^2.8.2"
   }
 }
