--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "aws-sdk": "^2.0.17",
     "restify": "^2.8.2",
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "moment": "^2.8.3",
+    "lodash": "^2.4.1"
   }
 }
